--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ecommerce-react",
-  "version": "1.2.0",
+  "name": "furniture-fusion",
+  "version": "1.3.0",
   "main": "index.js",
-  "author": "Julius Guevarra",
+  "author": "Siddharth Dhirde",
   "keywords": [
     "react-webpack",
     "boilerplate",
